Layout mostly done

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --soft-blue: hsl(240, 73%, 65%);
     --light-grayish-blue: hsl(240, 5%, 91%);
     --dark-grayish-blue: hsl(240, 6%, 50%);
+    --soft-red: hsl(14, 88%, 65%);
 }
 
 * {
@@ -22,17 +23,13 @@ body {
 }
 
 .faq {
-    margin: 10rem 1.5rem;
-    background: #fff;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
     width: 100%;
     max-width: 500px;
     min-height: 509px;
+    margin: 10rem 1.5rem;
+    background: #fff;
+    border-radius: 20px;
+    position: relative;
 }
 
 .faq__bg__container {
@@ -43,14 +40,47 @@ body {
 }
 
 .faq__list {
-    padding: 1rem;
+    margin-top: calc(104px + 2.5rem);
+    padding: 0 1rem;
     position: relative;
-    justify-self: flex-end;
 }
 
 .faq__list h1 {
     text-align: center;
     font-size: 2rem;
+}
+
+.faq__list__accordion {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.faq__answer {
+    display: none;
+    opacity: 0;
+    transition: opacity .3s ease-in;
+}
+
+.faq__list__accordion:hover {
+    color: var(--soft-red);
+}
+
+.faq__list__accordion img {
+    width: 10px;
+    height: 7px;
+    transition: transform .3s ease;
+}
+
+.faq__list ul li.active .faq__answer {
+    display: block;
+    opacity: 1;
+}
+
+.faq__list ul li.active img {
+    transform: rotateX(180deg);
 }
 
 .faq__list h5 {
@@ -102,11 +132,15 @@ body {
     .faq {
         max-width: 920px;
         margin: 1rem 3rem;
+        display: flex;
         flex-direction: row;
         justify-content: flex-end;
+        align-items: flex-start;
     }
 
     .faq__list {
+        margin: 0;
+        margin-top: 5rem;
         padding-right: 5rem;
         width: 50%;
     }
@@ -148,8 +182,8 @@ body {
         width: 964px;
         height: 944px;
         position: absolute;
-        top: 0;
+        top: 50%;
         left: 0;
-        transform: translate(-60%, -31%);
+        transform: translate(-580px, -60%);
     }
 }
